--- a/app/src/main/res/layout/item_answer_secondary_question.xml
+++ b/app/src/main/res/layout/item_answer_secondary_question.xml
@@ -16,4 +16,10 @@
         android:textSize="16dp"
         android:text="asdfasdfasdfasdfasdf"
         android:textColor="@color/colorPrimaryText"/>
+
+    <TextView
+        android:id="@+id/questionAnswersPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 </LinearLayout>
