--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,4 +8,9 @@
         android:orderInCategory="100"
         android:title="@string/logout"
         app:showAsAction="never" />
+    <item
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        android:title=""
+        android:icon="@mipmap/ic_blanco_barra_amate"/>
 </menu>
