--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/save"
         android:orderInCategory="100"
         android:title="@string/save"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        />
 
 </menu>
