--- a/app/src/main/res/layout/item_answer_secondary_question.xml
+++ b/app/src/main/res/layout/item_answer_secondary_question.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_button"
-    android:padding="15dp"
+    android:padding="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     >
 
-    <TextView
+    <Button
         android:id="@+id/questionAnswersSecondaryTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="16dp"
+        android:textSize="16sp"
+        android:background="@drawable/rounded_button"
         android:textColor="@color/colorPrimaryText"/>
 
     <TextView
