--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -23,7 +23,7 @@
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.05"
+            android:layout_weight="0.02"
             android:indeterminate="false"
             android:progressDrawable="@drawable/progressbar_states" />
 
@@ -31,7 +31,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.13"
+            android:layout_weight="0.1"
             android:orientation="vertical">
 
             <TextView
@@ -115,6 +115,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.4"
+            android:background="@drawable/rounded_primarylight"
+            android:gravity="center"
+            android:padding="20dp"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="18sp"
             android:visibility="gone" />
     </LinearLayout>
 
