--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="ToolbarTheme" parent="AppTheme">
@@ -67,5 +71,17 @@
 
     <style name="BtnIntro" parent="BtnMain">
         <item name="background">@drawable/rounded_button</item>
+    </style>
+
+    <style name="style_cell_head">
+        <item name="android:typeface">normal</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="style_cell">
+        <item name="android:typeface">normal</item>
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textSize">18sp</item>
     </style>
 </resources>
