se ajustan las preguntas, se adiciona estado de # de preguntas y los dos turnos por cuetionario, errores corregidos y validaciones

--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -76,8 +76,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
-                android:padding="20dp"
-                android:text="@string/yes" />
+                android:padding="20dp" />
 
             <TextView
                 android:id="@+id/mainQuestionTxtTrue"
@@ -91,8 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
-                android:padding="20dp"
-                android:text="@string/no" />
+                android:padding="20dp" />
 
             <TextView
                 android:id="@+id/mainQuestionTxtFalse"
