--- a/app/src/main/res/drawable/table_cell_head.xml
+++ b/app/src/main/res/drawable/table_cell_head.xml
@@ -3,7 +3,7 @@
     <!--Configuración del borde-->
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryLight" />
+        android:color="@color/colorPrimary" />
     <!--Configuración del fondo-->
     <solid
         android:color="@color/colorPrimaryLight"/>
