--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -4,14 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.pfccap.education.presentation.main.ui.fragments.IntroFragment">
-    <ProgressBar
-        android:id="@+id/progressBarF"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:indeterminate="true"
-        android:visibility="invisible" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,37 +12,45 @@
         android:orientation="vertical"
         android:weightSum="1">
 
+        <ProgressBar
+            android:id="@+id/progressBarF"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:indeterminate="true"
+            android:visibility="invisible" />
+
         <ImageView
             android:id="@+id/mainIntroImage"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.36"
-            android:src="@drawable/cancer_cervix"
-            />
+            android:src="@drawable/cancer_cervix" />
+
         <Button
             android:id="@+id/mainIntroBtnGo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@string/go_to_learn"
-            android:layout_weight="0.2"
-            android:drawableStart="@mipmap/ic_blanco_barra_amate"
-            android:drawableEnd="@mipmap/ic_keyboard_arrow_right_white_48dp"
-            android:textSize="25sp"
-            android:paddingStart="30dp"
-            android:textColor="@color/colorPrimaryText"
             android:layout_marginTop="-8dp"
-            />
+            android:layout_weight="0.2"
+            android:drawableEnd="@mipmap/ic_keyboard_arrow_right_white_48dp"
+            android:drawableStart="@mipmap/ic_blanco_barra_amate"
+            android:paddingStart="30dp"
+            android:text="@string/go_to_learn"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/mainIntroTxt"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.44"
-            android:text="Hola bienvenido al portal, sabias que el cancer de mama..., ahora contastaras un cuestionario"
             android:layout_marginTop="5dp"
-            android:textSize="20sp"
+            android:layout_weight="0.44"
+            android:gravity="center"
             android:padding="15dp"
-            android:gravity="center"/>
+            android:text="Hola bienvenido al portal, sabias que el cancer de mama..., ahora contastaras un cuestionario"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
