--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -48,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/nombre_usuario"
                     android:inputType="textCapWords"
-                    android:maxLength="50"/>
+                    android:maxLength="50" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Email Label -->
@@ -63,14 +64,17 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
-                    android:maxLength="50"/>
+                    android:maxLength="50" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Password Label -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                app:passwordToggleContentDescription="@string/password_enable"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorAccent">
 
                 <EditText
                     android:id="@+id/authSignupPassword"
@@ -78,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/password"
                     android:inputType="textPassword"
-                    android:maxLength="30"/>
+                    android:maxLength="30" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Signup Button -->
@@ -96,8 +100,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:gravity="center"
                 android:clickable="true"
+                android:gravity="center"
                 android:text="@string/tienes_cuenta"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
@@ -105,7 +109,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </FrameLayout>
