--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -7,20 +7,17 @@
     tools:context="org.pfccap.education.presentation.main.ui.activities.QuestionsActivity">
 
     <LinearLayout
-        android:id="@+id/activity_questions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/margin_horizontal_questions"
         android:paddingRight="@dimen/margin_horizontal_questions"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:weightSum="1">
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.05">
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/progressBarQ"
@@ -35,7 +32,7 @@
             <TextView
                 android:id="@+id/mainQuestionTxtPoints"
                 android:layout_width="30dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="-12dp"
                 android:background="@drawable/rounded_text_circle"
@@ -46,8 +43,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -71,100 +67,133 @@
                 android:background="@android:color/black" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/mainQuestionTxtQuestion"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
-            android:background="@drawable/rounded_darkcolor"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:padding="20dp"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="20sp" />
+            android:layout_height="match_parent">
 
-
-        <LinearLayout
-            android:id="@+id/questionLayoutButtons"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="1">
-
-            <Button
-                android:id="@+id/mainQuestionBtnTrue"
-                style="@style/BtnPpal"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4"
-                android:padding="20dp" />
-
-            <TextView
-                android:id="@+id/mainQuestionTxtTrue"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/activity_questions"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                >
 
-            <Button
-                android:id="@+id/mainQuestionBtnFalse"
-                style="@style/BtnPpal"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4"
-                android:padding="20dp" />
-
-            <TextView
-                android:id="@+id/mainQuestionTxtFalse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/mainQuestionTxtQuestion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_darkcolor"
+                    android:gravity="center"
+                    android:minHeight="0dp"
+                    android:padding="20dp"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="20sp" />
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/mainQuestionRecyclerAnswer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
-            android:paddingTop="10dp"
-            android:visibility="gone" />
+                <LinearLayout
+                    android:id="@+id/questionLayoutButtons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-        <TextView
-            android:id="@+id/mainQuestionTxtInfo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
-            android:background="@drawable/rounded_primarylight"
-            android:gravity="center"
-            android:padding="20dp"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="18sp"
-            android:visibility="gone" />
+                    <Button
+                        android:id="@+id/mainQuestionBtnTrue"
+                        style="@style/BtnPpal"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:layout_margin="10dp"
+                        android:padding="10dp" />
+
+                    <TextView
+                        android:id="@+id/mainQuestionTxtTrue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/mainQuestionBtnFalse"
+                        style="@style/BtnPpal"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:layout_margin="10dp"
+                        android:padding="10dp" />
+
+                    <TextView
+                        android:id="@+id/mainQuestionTxtFalse"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/mainQuestionRecyclerAnswer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/mainQuestionTxtInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_primarylight"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/mainQuestionLayoutThanks"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:visibility="gone">
 
         <ImageButton
             android:id="@+id/mainQuestionThanks"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/gracias_frase" />
+            android:background="@drawable/gracias" />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/logo_amate_blanco"/>
 
         <TextView
             android:id="@+id/mainQuestionTxtPointThanks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/logo"
+            android:background="@color/colorPrimaryLightTransparence"
+            android:padding="15dp"
+            android:layout_marginTop="80dp"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="18sp" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:padding="40dp"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="22sp" />
+            android:layout_marginBottom="20dp"
+            android:text="@string/final_thanks"
+            android:gravity="center"
+            android:textSize="30sp"
+            android:textColor="@color/colorPrimaryText"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
