--- a/app/src/main/res/layout/item_answer_secondary_question.xml
+++ b/app/src/main/res/layout/item_answer_secondary_question.xml
@@ -14,7 +14,8 @@
         android:layout_gravity="center"
         android:background="@drawable/rounded_button"
         android:textColor="@color/colorPrimaryText"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:padding="6dp"/>
 
     <TextView
         android:id="@+id/questionAnswersPoints"
