--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#db2763</color>
-    <color name="colorPrimaryDark">#a30039</color>
-    <color name="colorAccent">#ff6390</color>
-    <color name="colorPrimaryLight">#ff6390</color>
+    <color name="colorPrimary">#ff6390</color>
+    <color name="colorPrimaryDark">#c82c63</color>
+    <color name="colorAccent">#ff96c0</color>
+    <color name="colorPrimaryLight">#ff96c0</color>
     <color name="colorPrimaryLightTransparence">#70ff6390</color>
     <color name="colorPrimaryText">#ffffff</color>
     <color name="colorBlack">#080808</color>
     <color name="colorGray">#CCCCCC</color>
     <color name="colorFacebook">#3b5998</color>
     <color name="colorBlueLigth">#0da4a6</color>
+    <color name="colorBlueLigthligh">#5bd6d7</color>
     <color name="colorBlueLigthTransparence">#700da4a6</color>
 </resources>
